--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
+        },
+        {
+            "src": "/user(.*)",
+            "dest": "/api/user.php"
+        },
+        {
+            "src": "/controller(.*)",
+            "dest": "/api/controller.php"
         }
     ]
 }
