--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
-    "functions": {
-        "api/index.php": {
-            "runtime": "vercel-php@0.6.2"
-        }
-    },
+    "version": 2,
+    "builds": [
+      { "src": "*.php", "use": "@vercel/php" }
+    ],
     "routes": [
-        { "src": "/static/(.*)", "dest": "/public/$1" },
-        { "src": "/.*", "dest": "/api/index.php" }
+      { "src": "/(.*)", "dest": "/api/index.php" }
     ]
-}
+  }
