--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "*.php", "use": "@vercel/php" }
+    {
+      "src": "api/**/*.php",
+      "use": "@vercel/php"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.php" }
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.php"
+    }
   ]
 }
