--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/**/*.php", "use": "@vercel/php" }
+    { "src": "api/**/*.php", "use": "@vercel/php" },
+    { "src": "src/**/*.php", "use": "@vercel/php" }
   ],
   "routes": [
-    { "src": "/users", "dest": "/api/users.php" },
-    { "src": "/(.*)", "dest": "/api/index.php" }
+    { "src": "/(.*)", "dest": "/src/index.php" }
   ]
 }
- 
