--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/**/*.php", "use": "@vercel/php" },
-    { "src": "src/**/*.php", "use": "@vercel/php" }
+    {
+      "src": "api/**/*.php",
+      "use": "@vercel/php"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/src/index.php" }
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.php"
+    }
   ]
 }
