--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       "dest": "/api/index.php"
     },
     {
-      "src": "/src/Controller.php",
+      "src": "/Controller.php",
       "dest": "/src/Controller.php"
     },
     {
